--- a/navigatetest/navigatetest.vcxproj
+++ b/navigatetest/navigatetest.vcxproj
@@ -142,7 +142,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProgramW6432)\MobileRobots\Aria\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Program Files\MobileRobots\Aria\include</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -150,12 +150,23 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(ProgramW6432)\MobileRobots\Aria\lib64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>AriaVC14.lib;ws2_32.lib;winmm.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\Program Files\MobileRobots\Aria\lib64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>AriaVC14.lib;ws2_32.lib;winmm.lib;advapi32.lib;kernel32.lib;user32.lib;gdi32.lib;Shell32.lib</AdditionalDependencies>
+      <StackReserveSize>10000000</StackReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="navigatetest.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="basic.h" />
+    <ClInclude Include="CImg.h" />
+    <ClInclude Include="fsa.h" />
+    <ClInclude Include="low.h" />
+    <ClInclude Include="map.h" />
+    <ClInclude Include="showmap.h" />
+    <ClInclude Include="stlastar.h" />
+    <ClInclude Include="ThisRobot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
